Working on the gif picker stuff.

--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -47,7 +47,7 @@
   "column.community": "Local timeline",
   "column.direct": "Direct messages",
   "column.domain_blocks": "Hidden domains",
-  "column.favourites": "Favourites",
+  "column.favourites": "Favorites",
   "column.follow_requests": "Follow requests",
   "column.home": "Home",
   "column.lists": "Lists",
@@ -292,8 +292,8 @@
   "status.mute": "Mute @{name}",
   "status.mute_conversation": "Mute conversation",
   "status.open": "Expand this status",
-  "status.pin": "Pin on profile",
-  "status.pinned": "Pinned toot",
+  "status.pin": "Stick to profile",
+  "status.pinned": "Sticky toot",
   "status.reblog": "Boost",
   "status.reblog_private": "Boost to original audience",
   "status.reblogged_by": "{name} boosted",
