--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -31,6 +31,8 @@ en:
         setting_hide_network: Who you follow and who follows you will not be shown on your profile
         setting_noindex: Affects your public profile and status pages
         setting_theme: Affects how Mastodon looks when you're logged in from any device.
+        setting_column_width: Determines the default column width on the desktop web interface
+        setting_enable_markdown: Markdown support only works in the web interface by default
         username: Your username will be unique on %{domain}
         whole_word: When the keyword or phrase is alphanumeric only, it will only be applied if it matches the whole word
       imports:
@@ -87,6 +89,7 @@ en:
         setting_theme: Site theme
         setting_unfollow_modal: Show confirmation dialog before unfollowing someone
         setting_enable_markdown: Enable Markdown in toots
+        setting_column_width: Column width
         severity: Severity
         type: Import type
         username: Username
